# hastelink

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 9d9d693d9c91_add_oauth_columns_to_admin_user.py
backend/: config.py  dependencies.py  main.py
backend/db/: __init__.py  session.py
backend/middleware/: security.py
backend/models/: __init__.py  admin_user.py  audit_log.py  file_version.py  location.py
backend/routers/: approval.py  archive.py  auth.py  locations.py  oauth.py  public.py  upload.py
backend/schemas/: auth.py  file_version.py  location.py
backend/services/: approval_service.py  audit_service.py  cache_service.py  file_service.py  file_services.py
frontend/: package-lock.json  package.json
