[project]
name = "hastelink"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",           # Web framework (handles HTTP requests)
    "uvicorn[standard]>=0.27.0",  # ASGI server (runs your FastAPI app)
    "sqlalchemy[asyncio]>=2.0.0", # ORM (talks to database using Python objects)
    "asyncpg>=0.29.0",            # PostgreSQL driver (async version)
    "pydantic-settings>=2.1.0",   # Load settings from .env files
    "boto3>=1.34.0",              # AWS S3 SDK (works with MinIO too)
    "aioboto3>=12.0.0",           # Async version of boto3
    "python-multipart>=0.0.6",    # Handle file uploads
    "bcrypt==4.0.1",              # Password hashing
    "python-jose[cryptography]>=3.3.0",  # JWT tokens
]